--- a/app/assets/new-Manage-view.html
+++ b/app/assets/new-Manage-view.html
@@ -21,48 +21,56 @@
 
 </aside>
 <article class="wrap-main" id="wrap-main">
-<header>
-    <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
-        <div class="user-portrait-brand"></div>
-        <!--<div class="user-portrait-name">IF-EPM</div>-->
-    </div>
-    <nav class="pull-left">
-        <ul>
-            <li><a>
-                <span>Get Started</span>
-                <span class="nav-get-started"></span>
-            </a></li>
-            <li><a>
-                <span>DashBoard</span>
-                <span class="nav-dash-board"></span>
-            </a></li>
-            <li><a href="new-Analytics.html">
-                <span>Analytics</span>
-                <span class="nav-analytics"></span>
-            </a></li>
-            <li><a>
-                <span>Reports</span>
-                <span class='nav-report'></span>
-            </a></li>
-            <li class="relative">
-                <a>
-                    <span>Manage</span>
-                    <span class='nav-manage'></span>
-                </a>
-                <ul class="nav-manage-sub">
-                    <li><a>KPIs</a></li>
-                    <li><a>Users</a></li>
-                    <li><a>Views</a></li>
-                    <li><a>Billings</a></li>
-                </ul>
+    <header>
+        <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
+            <div class="user-portrait-brand"></div>
+            <!--<div class="user-portrait-name">IF-EPM</div>-->
+        </div>
+        <nav class="pull-left">
+            <ul>
+                <li><a>
+                    <span>Get Started</span>
+                </a></li>
+                <li class="relative">
+                    <a>
+                        <span>Manage</span>
+                    </a>
+                    <ul class="nav-manage-sub">
+                        <li><a>KPIs</a></li>
+                        <li><a>Users</a></li>
+                        <li><a>Views</a></li>
+                        <li><a>Billings</a></li>
+                    </ul>
+                </li>
+                <li class="active"><a>
+                    <span>DashBoard</span>
+                </a></li>
+                <li><a href="new-Analytics.html">
+                    <span>Analytics</span>
+                </a></li>
+                <li><a>
+                    <span>Reports</span>
+                </a></li>
+                <li><a>
+                    <span>&nbsp;</span>
+                </a></li>
+                <li><a>
+                    <span>Entry KPIs</span>
+                </a></li>
+            </ul>
+        </nav>
+        <ul class="nav-user-part">
+            <li>
+                <i class="icon-user"></i>
             </li>
-            <li><a>
-                <span>Entry KPIs</span>
-                <span class="nav-entry-kpi"></span>
-            </a></li>
+            <li class='empty'>
+                <span>&nbsp;</span>
+            </li>
+            <li>
+                <a>Log Out</a>
+            </li>
         </ul>
-    </nav>
-</header>
+    </header>
 
 
 
@@ -74,8 +82,9 @@
 
 
 
-
+    <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
 <ul class="manage-left-menu" id="manage-left-menu" type="entity">
+    <div style="width:auto;height:71px;"></div>
     <li>Manage View</li>
     <li id="manage-menu-add">
         <input type="text"/>
@@ -104,24 +113,6 @@
 
 
 
-    <div class="manage-user-add" id="manage-entity-add" special="entity">
-        <i class="icon-remove" id="close-add-entity" ></i>
-        <p>UserGroup List</p>
-        <ul>
-            <li>
-                <h3 id="11">User Group11</h3>
-            </li>
-            <li>
-                <h3 id="21">User Group21</h3>
-            </li>
-            <li>
-                <h3 id="31">User Group31</h3>
-            </li>
-            <li>
-                <h3 id="41">User Group41</h3>
-            </li>
-        </ul>
-    </div>
 
 
 
@@ -163,12 +154,31 @@
             </ul>
         </div>
 </div>
+    </div>
 
 
 
 
 
-
+        <div class="manage-user-add" id="manage-entity-add" special="entity">
+            <div style="width:auto;height:71px;"></div>
+            <i class="icon-remove" id="close-add-entity" ></i>
+            <p>UserGroup List</p>
+            <ul>
+                <li>
+                    <h3 id="11">User Group11</h3>
+                </li>
+                <li>
+                    <h3 id="21">User Group21</h3>
+                </li>
+                <li>
+                    <h3 id="31">User Group31</h3>
+                </li>
+                <li>
+                    <h3 id="41">User Group41</h3>
+                </li>
+            </ul>
+        </div>
 
 
 </article>
