--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -29,24 +29,10 @@
         <ul>
             <li><a>
                 <span>Get Started</span>
-                <span class="nav-get-started"></span>
-            </a></li>
-            <li><a>
-                <span>DashBoard</span>
-                <span class="nav-dash-board"></span>
-            </a></li>
-            <li><a href="new-Analytics.html">
-                <span>Analytics</span>
-                <span class="nav-analytics"></span>
-            </a></li>
-            <li><a>
-                <span>Reports</span>
-                <span class='nav-report'></span>
             </a></li>
             <li class="relative">
                 <a>
                     <span>Manage</span>
-                    <span class='nav-manage'></span>
                 </a>
                 <ul class="nav-manage-sub">
                     <li><a>KPIs</a></li>
@@ -55,12 +41,34 @@
                     <li><a>Billings</a></li>
                 </ul>
             </li>
+            <li class="active"><a>
+                <span>DashBoard</span>
+            </a></li>
+            <li><a href="new-Analytics.html">
+                <span>Analytics</span>
+            </a></li>
+            <li><a>
+                <span>Reports</span>
+            </a></li>
+            <li><a>
+                <span>&nbsp;</span>
+            </a></li>
             <li><a>
                 <span>Entry KPIs</span>
-                <span class="nav-entry-kpi"></span>
             </a></li>
         </ul>
     </nav>
+    <ul class="nav-user-part">
+        <li>
+            <i class="icon-user"></i>
+        </li>
+        <li class='empty'>
+            <span>&nbsp;</span>
+        </li>
+        <li>
+            <a>Log Out</a>
+        </li>
+    </ul>
 </header>
 
 
@@ -73,8 +81,9 @@
 
 
 
-
+<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
 <ul class="manage-left-menu" id="manage-left-menu" type="group">
+    <div style="width:auto;height:71px;"></div>
     <li>Manage User</li>
     <li id="manage-menu-add">
         <input type="text"/>
@@ -97,168 +106,8 @@
 </ul>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="manage-user-add" id="manage-user-add" general="manage-user-add">
-    <i class="icon-remove" id="close-add-user" general="close-user"></i>
-
-    <div>
-        <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
-        <input type="text" placeholder="* Email" id="new-user-mail" general="user-mail"/>
-        <input type="password" placeholder="* Password" id="new-user-password"/>
-        <input type="password" placeholder="* Password Confirm" id="new-user-password-confirm"/>
-        <label>
-            <input type="radio" name="user-role" data-name="General" data-role="1" value="100" checked>
-            General
-        </label>
-        <label>
-            <input type="radio" name="user-role" data-name="Department Manager" data-role="2" value="200">
-            Department Manager
-        </label>
-        <label>
-            <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">
-            General Manager
-        </label>
-        <label>
-            <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">
-            Administrator
-        </label>
-        <input type="submit" value="Add" class="btn btn-primary" id="manage-user-add-new"/>
-    </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-<div class="manage-user-add" id="user-edit" general="manage-user-add">
-    <i class="icon-remove" id="close-user-edit" general="close-user"></i>
-
-    <div>
-        <input type="text" placeholder="* Name" id="edit-user-name" general="user-name"/>
-        <input type="text" placeholder="* Email" id="edit-user-mail" general="user-mail"/>
-        <label>
-            <input type="radio" name="edit-user-role" data-name="General" data-role="1" value="100" checked>
-            General
-        </label>
-        <label>
-            <input type="radio" name="edit-user-role" data-name="Department Manager" data-role="2" value="200">
-            Department Manager
-        </label>
-        <label>
-            <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="300">
-            General Manager
-        </label>
-        <label>
-            <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
-            Administrator
-        </label>
-        <input type="submit" value="Ok" class="btn btn-primary" id="manage-user-edit-old"/>
-    </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="assign-kpi-wrap" id="assign-kpi-wrap">
-    <div id="assign-kpi" class="assign-kpi" special="user">
-        <div class="assign-kpi-top">
-            <a class="btn" id="assign-kpi-cancel">Close</a>
-            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
-            <p><span class="normal-blue"></span><span>'s KPI</span></p>
-        </div>
-        <div class="assign-kpi-inner" id="assign-kpi-inner">
-            <ul class="left">
-                <li id="kpi1">
-                    <table>
-                        <tr>
-                            <td>KPI 1</td>
-                            <td><input type="text" kpi_id="kpi1"/></td>
-                        </tr>
-                        <tr>
-                            <td>some description here</td>
-                            <td>Target</td>
-                        </tr>
-                    </table>
-                    <i class="icon-trash"></i>
-                </li>
-            </ul>
-        </div>
-
-        <div class="assign-kpi-options" special="user" id="assign-kpi-options">
-            <i class="icon-remove" id="close-assign-kpi-options"></i>
-
-            <div class="select-div">
-                <select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">
-                    <option value="200">Up</option>
-                    <option value="100">None</option>
-                    <option value="300">Down</option>
-                </select>
-            </div>
-            <ul id="assign-kpi-list">
-                <li>
-                    <h3 kpi_id="kk1">KPI 1</h3>
-                    <p>some description here</p>
-                </li>
-                <li>
-                    <h3 kpi_id="kk2">KPI 1</h3>
-                    <p>some description here</p>
-                </li>
-                <li>
-                    <h3 kpi_id="kk3">KPI 1</h3>
-                    <p>some description here</p>
-                </li>
-            </ul>
-        </div>
-
-    </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
 <div class="manage-right-content" id="manage-right-content">
+
     <div class="manage-btn-group" id="manage-btn-group">
         <a class="btn btn-primary" id="add-user-show"><i class="icon-plus"></i> User</a>
 
@@ -323,7 +172,126 @@
         </ul>
     </div>
 </div>
+</div>
 
+
+
+<div class="manage-user-add" id="manage-user-add" general="manage-user-add">
+    <div style="width:auto;height:71px;"></div>
+    <i class="icon-remove" id="close-add-user" general="close-user"></i>
+
+    <div>
+        <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
+        <input type="text" placeholder="* Email" id="new-user-mail" general="user-mail"/>
+        <input type="password" placeholder="* Password" id="new-user-password"/>
+        <input type="password" placeholder="* Password Confirm" id="new-user-password-confirm"/>
+        <label>
+            <input type="radio" name="user-role" data-name="General" data-role="1" value="100" checked>
+            General
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="Department Manager" data-role="2" value="200">
+            Department Manager
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">
+            General Manager
+        </label>
+        <label>
+            <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">
+            Administrator
+        </label>
+        <input type="submit" value="Add" class="btn btn-primary" id="manage-user-add-new"/>
+    </div>
+</div>
+
+
+
+
+
+<div class="manage-user-add" id="user-edit" general="manage-user-add">
+    <div style="width:auto;height:71px;"></div>
+    <i class="icon-remove" id="close-user-edit" general="close-user"></i>
+
+    <div>
+        <input type="text" placeholder="* Name" id="edit-user-name" general="user-name"/>
+        <input type="text" placeholder="* Email" id="edit-user-mail" general="user-mail"/>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="General" data-role="1" value="100" checked>
+            General
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="Department Manager" data-role="2" value="200">
+            Department Manager
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="300">
+            General Manager
+        </label>
+        <label>
+            <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
+            Administrator
+        </label>
+        <input type="submit" value="Ok" class="btn btn-primary" id="manage-user-edit-old"/>
+    </div>
+</div>
+
+
+
+<div class="assign-kpi-wrap" id="assign-kpi-wrap">
+    <div id="assign-kpi" class="assign-kpi" special="user">
+        <div class="assign-kpi-top">
+            <a class="btn" id="assign-kpi-cancel">Close</a>
+            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
+            <p><span class="normal-blue"></span><span>'s KPI</span></p>
+        </div>
+        <div class="assign-kpi-inner" id="assign-kpi-inner">
+            <ul class="left">
+                <li id="kpi1">
+                    <table>
+                        <tr>
+                            <td>KPI 1</td>
+                            <td><input type="text" kpi_id="kpi1"/></td>
+                        </tr>
+                        <tr>
+                            <td>some description here</td>
+                            <td>Target</td>
+                        </tr>
+                    </table>
+                    <i class="icon-trash"></i>
+                </li>
+            </ul>
+        </div>
+
+        <div class="assign-kpi-options" special="user" id="assign-kpi-options">
+            <i class="icon-remove" id="close-assign-kpi-options"></i>
+
+            <div class="select-div">
+                <select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">
+                    <option value="200">Up</option>
+                    <option value="100">None</option>
+                    <option value="300">Down</option>
+                </select>
+            </div>
+            <ul id="assign-kpi-list">
+                <li>
+                    <h3 kpi_id="kk1">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+                <li>
+                    <h3 kpi_id="kk2">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+                <li>
+                    <h3 kpi_id="kk3">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+</div>
 
 </article>
 <div class="message-box" id="MessageBox">
