--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -74,7 +74,7 @@
     <div class="dashboard-add-sub-menu" id="dashboard-add-sub-menu">
         <ul>
             <li>
-                <a><i class="icon-arrow-left"></i> Back</a>
+                <a class="icon-arrow-left"></a>
             </li>
             <li class="active">
                 <a>Custom Add</a>
