--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -88,10 +88,14 @@
                 </div>
             </div>
 
-            <div class="dashboard-content">
+            <div class="dashboard-content" id="dashboard-content">
                 <div class="gridster" >
                     <ul class="dashBoard-show" id="dashBoard-show">
-
+                          <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
                     </ul>
                 </div>
             </div>
@@ -133,7 +137,7 @@
                 <p>Resize the dashboard in the left to full screen so that you
                     can demonstrate it to your colleagues or leaders ,use Esc to
                     bring it back</p>
-                <a class="btn btn-primary">Full Now</a>
+                <a class="btn btn-primary" id="dashboard-full-size">Full Now</a>
             </section>
 
         </aside>
