--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -205,7 +205,7 @@
             </div>
             <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
                 <tr>
-                    <td class="analytics-chart-line" type="line">
+                    <td class="analytics-chart-line image" type="line">
                         <p style="display:none">Line</p>
                     </td>
                     <td class="analytics-chart-column" type="column">
