--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -251,11 +251,13 @@
                     <table>
                         <tr>
                             <td>KPI 1</td>
-                            <td><input type="text" kpi_id="kpi1"/></td>
+                            <td><input type="text" kpi_id="kpi1" class="target_max"/></td>
+                            <td><input type="text" kpi_id="kpi1" class="target_min"/></td>
                         </tr>
                         <tr>
                             <td>some description here</td>
-                            <td>Target</td>
+                            <td>Target Max</td>
+                            <td>Target Min</td>
                         </tr>
                     </table>
                     <i class="icon-trash"></i>
