--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -242,7 +242,7 @@
     <div id="assign-kpi" class="assign-kpi" special="user">
         <div class="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Close</a>
-            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
+            <a class="btn btn-primary" id="assign-kpi-pick"  state="close"><i class="icon-key"></i> All KPIs</a>
             <p><span class="normal-blue"></span><span>'s KPI</span></p>
         </div>
         <div class="assign-kpi-inner" id="assign-kpi-inner">
