--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -77,7 +77,7 @@
     </header>
 
     <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
-        <div class="content-left-main" name="dashboard" id="content-left-main">
+        <div class="content-left-main" name="dashboard" id="content-left-main" style="display:table-cell">
             <div style="width:auto;height:71px;"></div>
             <div class="left-content-title" id="left-content-title">
                 <p id="current-group-item" class="current-group-item"></p>
