--- a/app/assets/new-Manage-view.html
+++ b/app/assets/new-Manage-view.html
@@ -92,18 +92,18 @@
 
         <p class="manage-add-tooltip">Enter: confirm <br/>Esc: cancel</p>
     </li>
-    <li class="active" title="View1" number="1">
-        <i class="icon-trash icon-item"></i>
-        <a>View1</a>
-    </li>
-    <li title="View2" number="2">
-        <i class="icon-trash icon-item"></i>
-        <a>View2</a>
-    </li>
-    <li title="View3" number="3">
-        <i class="icon-trash icon-item"></i>
-        <a>View3</a>
-    </li>
+    <!--<li class="active" title="View1" number="1">-->
+        <!--<i class="icon-trash icon-item"></i>-->
+        <!--<a>View1</a>-->
+    <!--</li>-->
+    <!--<li title="View2" number="2">-->
+        <!--<i class="icon-trash icon-item"></i>-->
+        <!--<a>View2</a>-->
+    <!--</li>-->
+    <!--<li title="View3" number="3">-->
+        <!--<i class="icon-trash icon-item"></i>-->
+        <!--<a>View3</a>-->
+    <!--</li>-->
 </ul>
 
 
