--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -91,11 +91,11 @@
             <div class="dashboard-content" id="dashboard-content">
                 <div class="gridster" >
                     <ul class="dashBoard-show" id="dashBoard-show">
-                          <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
-                        <!--<li>asdsadsdaad</li>-->
+                          <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
+                        <li>asdsadsdaad</li>
                     </ul>
                 </div>
             </div>
@@ -108,18 +108,18 @@
                 <h3>DashBoard Group</h3>
                 <i class="icon-plus" id="content-right-nav-add-button"></i>
                 <ul id="content-right-nav-group">
-                    <!--<li class="active" title="DashBoard1" number="1" >-->
-                        <!--<a >DashBoard1</a>-->
-                        <!--<i class="icon-remove"></i>-->
-                    <!--</li>-->
-                    <!--<li title="DashBoard2" number="2">-->
-                        <!--<a>DashBoard2</a>-->
-                        <!--<i class="icon-remove"></i>-->
-                    <!--</li>-->
-                    <!--<li title="DashBoard3" number="3">-->
-                        <!--<a>DashBoard3</a>-->
-                        <!--<i class="icon-remove"></i>-->
-                    <!--</li>-->
+                    <li class="active" title="DashBoard1" number="1" >
+                        <a >DashBoard1</a>
+                        <i class="icon-remove"></i>
+                    </li>
+                    <li title="DashBoard2" number="2">
+                        <a>DashBoard2</a>
+                        <i class="icon-remove"></i>
+                    </li>
+                    <li title="DashBoard3" number="3">
+                        <a>DashBoard3</a>
+                        <i class="icon-remove"></i>
+                    </li>
                 </ul>
                 <div class="content-right-nav-add-block" id="content-right-nav-add-block">
                     <p>give it a name</p>
