--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -91,11 +91,11 @@
             <div class="dashboard-content" id="dashboard-content">
                 <div class="gridster" >
                     <ul class="dashBoard-show" id="dashBoard-show">
-                          <li>asdsadsdaad</li>
-                        <li>asdsadsdaad</li>
-                        <li>asdsadsdaad</li>
-                        <li>asdsadsdaad</li>
-                        <li>asdsadsdaad</li>
+                          <!--<li>asdsadsdaad</li>-->
+                        <!--<li>asdsadsdaad</li>-->
+                        <!--<li>asdsadsdaad</li>-->
+                        <!--<li>asdsadsdaad</li>-->
+                        <!--<li>asdsadsdaad</li>-->
                     </ul>
                 </div>
             </div>
