--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -232,12 +232,14 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <td>Out of Target</td>
                                 <td>Total Record</td>
                                 <td>Total Value</td>
                                 <td>Average Value</td>
+                                <td>KPI</td>
                             </tr>
                         </table>
                     </div>
