--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -53,7 +53,7 @@
         </dd>
     </dl>
     <br />
-    <a class="login-btn log-btn" onclick="document.forms[0].submit();">Go</a>
+    <a id="sign-in-btn" class="login-btn log-btn" onclick="document.forms[0].submit();">Go</a>
 </form>
 <form action="/subscriptions" method="post" class="signIn-block signShow-block clearfix" id="signUp-block" style="display:none" special="sign-up">
     <h3 class="text-center">Sign up</h3>
@@ -87,7 +87,7 @@
         </dd>
     </dl>
     <br />
-    <a class="login-btn log-btn" onclick="document.forms[0].submit();">Ok</a>
+    <a id="sign-up-btn" class="login-btn log-btn" onclick="document.forms[0].submit();">Ok</a>
 </form>
 
 
@@ -144,7 +144,17 @@
                 $('#signUp-block').slideUp('500');
                 $("#sign-up").attr('state','close');
             }
-
+        });
+        $("body").on("click",function(event){
+           var e=adapt_event(event);
+           if(e.keyCode==13){
+               if($("#sign-in").attr("state")=="open"){
+                   $("#sign-in-btn").click();
+               }
+               else if($("#sign-up").attr("state")=="open"){
+                   $("#sign-up-btn").click();
+               }
+           }
         });
     })
 </script>
