--- a/app/assets/new-Log-in.html
+++ b/app/assets/new-Log-in.html
@@ -145,7 +145,7 @@
                 $("#sign-up").attr('state','close');
             }
         });
-        $("body").on("keyup",function(event){
+        $("body").on("keyup","input[type='text'],input[type='password']",function(event){
            var e=adapt_event(event).event;
            if(e.keyCode==13){
                if($("#sign-in").attr("state")=="open"){
