--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -9,7 +9,7 @@
     <link href="stylesheets/aero.css" rel="stylesheet">
     <link href="stylesheets/Manage.css" rel="stylesheet">
     <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
-
+    <link href="stylesheets/tipsy.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -133,7 +133,7 @@
                             <td >Up</td>
                             <td class="manage-kpi-target"><div><span class="can-change">200</span><span>$</span><input  type='text' effect_on="1"/></div></td>
                             <td class="manage-kpi-target"><div><span class="can-change">200</span><span>$</span><input  type='text' effect_on="1"/></div></td>
-                            <td >No</td>
+                            <td title="dasdasd">No</td>
                         </tr>
                         <tr>
                             <td>all the description here</td>
@@ -290,6 +290,7 @@
 <script src="javascripts/Manage-right-list.js"></script>
 <script src="javascripts/Manage.js"></script>
 <script src="javascripts/Manage-kpi.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 <<script>
     $(document).ready(function(){
         MANAGE.init();
