--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -15,6 +15,7 @@
     <link href="stylesheets/Dashboard-add.css" rel="stylesheet">
     <link href="stylesheets/2_column_right_nav.css" rel="stylesheet">
     <link href="stylesheets/Analytic-main.css" rel="stylesheet">
+    <link href="stylesheets/tipsy.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -281,6 +282,7 @@
 <script src="javascripts/Dashboard-add.js"></script>
 <script src="javascripts/2_column_right_nav.js"></script>
 <script src="javascripts/dashboard_type_special.js"></script>
+<script src="javascripts/jquery.tipsy.js"></script>
 <script>
     $(document).ready(function(){
         DASHBOARD.add.init();
