create manage department html

--- a/app/assets/new-Manage-department.html
+++ b/app/assets/new-Manage-department.html
@@ -80,13 +80,13 @@
 
 
     <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
-        <div class="content-left-main" name="dashboard" id="content-left-main">
+        <div class="content-left-main" id="content-left-main">
             <div style="width:auto;height:71px;"></div>
             <div class="left-content-title" id="left-content-title">
                 <p class="current-group-item">Mange Department</p>
             </div>
 
-            <div class="manage-left-content" id="dashboard-content">
+            <div class="manage-left-content" id="dashboard-content" name="department">
                 <div class="right-list-top-control" id="right-list-top-control" name="department">
                     <input type="checkbox" id="manage-total-check"/>
                     <a class="btn" id="manage-item-remove">Delete</a>
@@ -116,7 +116,7 @@
                 <h3>Create Department</h3>
                 <p>Department is the place to put your staff and the view is
                 made up of departments</p>
-                <a class="btn btn-primary" id="add-department">Add Now</a>
+                <a class="btn btn-primary" id="add-department">Create Now</a>
                 <div class="content-right-nav-add-block" id="content-right-nav-add-block" name="department">
                     <p>give it a name</p>
                     <input type='text' />
