--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -193,7 +193,7 @@
             then entry the kpi assigned</p>
             <a class="btn btn-primary" id="add-user-show">Create Now</a>
         </section>
-        <section id="manage-user-add" class="create-user manage-user-add">
+        <section id="manage-user-add" class="create-user manage-user-add"  general="manage-user-add">
             <i class="icon-remove" id="close-add-user" general="close-user"></i>
             <div>
                 <input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>
@@ -239,116 +239,75 @@
     </aside>
 
 
-    <!--<div class="manage-user-add" id="manage-user-add" general="manage-user-add">-->
-        <!--<i class="icon-remove" id="close-add-user" general="close-user"></i>-->
-
-        <!--<div>-->
-            <!--<input type="text" placeholder="* Name" id="new-user-name" general="user-name"/>-->
-            <!--<input type="text" placeholder="* Email" id="new-user-mail" general="user-mail"/>-->
-            <!--<input type="password" placeholder="* Password" id="new-user-password"/>-->
-            <!--<input type="password" placeholder="* Password Confirm" id="new-user-password-confirm"/>-->
-            <!--<label>-->
-                <!--<input type="radio" name="user-role" data-name="General" data-role="1" value="100" checked>-->
-                <!--General-->
-            <!--</label>-->
-            <!--<label>-->
-                <!--<input type="radio" name="user-role" data-name="Department Manager" data-role="2" value="200">-->
-                <!--Department Manager-->
-            <!--</label>-->
-            <!--<label>-->
-                <!--<input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">-->
-                <!--General Manager-->
-            <!--</label>-->
-            <!--<label>-->
-                <!--<input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">-->
-                <!--Administrator-->
-            <!--</label>-->
-            <!--<input type="submit" value="Add" class="btn btn-primary" id="manage-user-add-new"/>-->
-        <!--</div>-->
-    <!--</div>-->
-
 </div>
 
 
 
 
 
+<div class="assign-kpi-wrap" id="assign-kpi-wrap">
+    <div id="assign-kpi" class="assign-kpi" special="user">
+        <div class="assign-kpi-top" id="assign-kpi-top">
+            <i class="icon-remove" id="assign-kpi-cancel"></i>
+            <div class="select-div">
+                <select data-placeholder="* User" class="chosen-select">
+                    <option value=""></option>
+                    <option value="sad">12</option>
+                    <option value="asd">13</option>
+                    <option value="asd">14</option>
+                </select>
+            </div>
+            <a class="btn btn-primary assign-kpi-pick" id="assign-kpi-pick"  state="close"><i class="icon-key"></i> All KPIs</a>
+        </div>
+        <div class="assign-kpi-inner" id="assign-kpi-inner">
+            <ul class="left">
+                <li id="kpi1">
+                    <table>
+                        <tr>
+                            <td>KPI 1</td>
+                            <td><input type="text" kpi_id="kpi1" class="target_max"/></td>
+                            <td><input type="text" kpi_id="kpi1" class="target_min"/></td>
+                        </tr>
+                        <tr>
+                            <td>some description here</td>
+                            <td>Target Max</td>
+                            <td>Target Min</td>
+                        </tr>
+                    </table>
+                    <i class="icon-trash"></i>
+                </li>
+            </ul>
+        </div>
 
+        <div class="assign-kpi-options" special="user" id="assign-kpi-options">
+            <i class="icon-remove" id="close-assign-kpi-options"></i>
 
+            <div class="select-div">
+                <select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">
+                    <option value="200">Up</option>
+                    <option value="100">None</option>
+                    <option value="300">Down</option>
+                </select>
+            </div>
+            <ul id="assign-kpi-list">
+                <li>
+                    <h3 kpi_id="kk1">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+                <li>
+                    <h3 kpi_id="kk2">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+                <li>
+                    <h3 kpi_id="kk3">KPI 1</h3>
+                    <p>some description here</p>
+                </li>
+            </ul>
+        </div>
 
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<div class="assign-kpi-wrap" id="assign-kpi-wrap">-->
-    <!--<div id="assign-kpi" class="assign-kpi" special="user">-->
-        <!--<div class="assign-kpi-top">-->
-            <!--<a class="btn" id="assign-kpi-cancel">Close</a>-->
-            <!--<a class="btn btn-primary" id="assign-kpi-pick"  state="close"><i class="icon-key"></i> All KPIs</a>-->
-            <!--<p><span class="normal-blue"></span><span>'s KPI</span></p>-->
-        <!--</div>-->
-        <!--<div class="assign-kpi-inner" id="assign-kpi-inner">-->
-            <!--<ul class="left">-->
-                <!--<li id="kpi1">-->
-                    <!--<table>-->
-                        <!--<tr>-->
-                            <!--<td>KPI 1</td>-->
-                            <!--<td><input type="text" kpi_id="kpi1" class="target_max"/></td>-->
-                            <!--<td><input type="text" kpi_id="kpi1" class="target_min"/></td>-->
-                        <!--</tr>-->
-                        <!--<tr>-->
-                            <!--<td>some description here</td>-->
-                            <!--<td>Target Max</td>-->
-                            <!--<td>Target Min</td>-->
-                        <!--</tr>-->
-                    <!--</table>-->
-                    <!--<i class="icon-trash"></i>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</div>-->
-
-        <!--<div class="assign-kpi-options" special="user" id="assign-kpi-options">-->
-            <!--<i class="icon-remove" id="close-assign-kpi-options"></i>-->
-
-            <!--<div class="select-div">-->
-                <!--<select class="chosen-select" data-placeholder="KPI Category" id="kpi-category">-->
-                    <!--<option value="200">Up</option>-->
-                    <!--<option value="100">None</option>-->
-                    <!--<option value="300">Down</option>-->
-                <!--</select>-->
-            <!--</div>-->
-            <!--<ul id="assign-kpi-list">-->
-                <!--<li>-->
-                    <!--<h3 kpi_id="kk1">KPI 1</h3>-->
-                    <!--<p>some description here</p>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<h3 kpi_id="kk2">KPI 1</h3>-->
-                    <!--<p>some description here</p>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<h3 kpi_id="kk3">KPI 1</h3>-->
-                    <!--<p>some description here</p>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</div>-->
-
-    <!--</div>-->
-
-<!--</div>-->
+</div>
 
 </article>
 <div class="message-box" id="MessageBox">
